force-app/main/default/objects/FLAGS__Switchboard_View__c/FLAGS__Switchboard_View__c.object-meta.xml
<CustomObject>
    <description>A view in the Case Flags Switchboard</description>
    <label>Switchboard View</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Switchboard Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>