force-app/main/default/objects/FLAGS__Switchboard_View__c/fields/FLAGS__Case_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Case_Record_Types__c</fullName>
    <description>JSON list of all case record type ids associated with this view.

Sample
&quot;{&quot;ids&quot;:&quot;[\&quot;012111111111111111\&quot;, \&quot;012111111111111112\&quot;]&quot;}&quot;</description>
    <label>Case Record Types</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>