force-app/main/default/objects/FLAGS__Switchboard_View__c/fields/FLAGS__Flag_Slider_Starting_Position__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Flag_Slider_Starting_Position__c</fullName>
    <defaultValue>&quot;4&quot;</defaultValue>
    <description>The starting position of the flag slider in the Case Flags Switchboard for this view.
Values are as follows: 
4 - All Cases
3 - Flagged Cases
2 - Level 2 and Higher Flagged Cases
1 - Level 3 and Higher Flagged Cases
0 - Level 4 Flagged Cases</description>
    <label>Flag Slider Starting Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>