force-app/main/default/objects/FLAGS__Switchboard_View__c/fields/FLAGS__Last_Used__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Last_Used__c</fullName>
    <description>The time this view was last opened.</description>
    <label>Last Used</label>
    <type>DateTime</type>
</CustomField>