force-app/main/default/objects/FLAGS__Switchboard_View__c/fields/FLAGS__Popover_Field_Set__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Popover_Field_Set__c</fullName>
    <description>The field set that controls which fields are displayed whenever a user hovers over a CaseNumber link in the Case Flags Switchboard.</description>
    <label>Popover Field Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>